<resources>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error">Error</string>
    <string name="warning">Warning</string>
    <string name="shutdown">Shutdown</string>
    <string name="replace">Replace</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="deleting">Deleting</string>
    <string name="select_all">Select all</string>
    <string name="apply">Apply</string>
    <string name="save">Save</string>
    <string name="install">Install</string>
    <string name="search">Search</string>
    <string name="not_available">N/A</string>
    <string name="elapsed_time_format_d_h_mm">%1$d d. %2$d h. %3$d m</string>
    <string name="elapsed_time_format_h_mm_ss">%1$d h. %2$d m. %3$d s</string>
    <string name="elapsed_time_format_mm_ss">%1$d m. %2$d s</string>
    <string name="elapsed_time_format_ss">%1$d s</string>
    <string name="sort_by_ascending">By ascending</string>
    <string name="sort_by_descending">By descending</string>
    <string name="sorting">Sorting</string>
    <string name="def">Default</string>
    <string name="foreground_notification">Foreground notification</string>
    <string name="link">Link</string>
    <string name="filter">Filter</string>
    <string name="refresh">Refresh</string>
    <string name="edit">Edit</string>
    <string name="menu">Menu</string>
    <string name="main_empty_torrent_list">No torrents</string>
    <string name="spinner_all_torrents">All</string>
    <string name="spinner_downloading_torrents">Downloading</string>
    <string name="spinner_downloaded_torrents">Finished</string>
    <string name="spinner_downloading_metadata_torrents">Downloading metadata</string>
    <string name="delete_torrent_with_downloaded_files">Delete with downloaded files</string>
    <string name="delete_selected_torrent">Delete the selected torrent? This operation cannot be undone</string>
    <string name="delete_selected_torrents">Delete the selected torrents? This operation cannot be undone</string>
    <string name="force_recheck_torrent">Force recheck</string>
    <string name="force_announce_torrent">Force announce</string>
    <string name="add_link">Add link</string>
    <string name="dialog_add_link_title">Enter the infohash value, magnet link, or HTTP/HTTPS link</string>
    <string name="torrent_list_empty">No torrents</string>
    <string name="select_or_add_torrent">Select or add a torrent</string>
    <string name="error_empty_link">Please enter link</string>
    <string name="error_invalid_link">Invalid link</string>
    <string name="error_open_torrent_file">Unable to open the torrent file</string>
    <string name="open_file">Open file</string>
    <string name="settings">Settings</string>
    <string name="ip_filter_add_error">Failed to add IP filter. Maybe file is corrupted or has an incorrect format</string>
    <string name="ip_filter_add_success">IP filter added successfully</string>
    <string name="proxy_settings_applied">Proxy server settings applied successfully</string>
    <string name="proxy_settings_apply_after_reboot">Proxy server settings will be applied after restarting the app</string>
    <string name="theme_settings_apply_after_reboot">Theme settings will be applied after restarting the app</string>
    <string name="settings_apply_after_reboot">Settings will be applied after restarting the app</string>
    <string name="about">About</string>
    <string-array name="sort_torrent_by">
        <item>Without sorting</item>
        <item>Name</item>
        <item>Date added</item>
        <item>Size</item>
        <item>Progress</item>
        <item>ETA</item>
        <item>Peers</item>
    </string-array>
    <string name="downloading_torrent_notify_template" formatted="false">%1$d%% \u2022 %2$s \u2022 \u2193 %3$s/s \u2022 %4$s</string>
    <string name="seeding_torrent_notify_template" formatted="false">%1$s \u2022 \u2191 %2$s/s \u2022 %3$s</string>
    <string name="other_torrent_notify_template" formatted="false">%1$s \u2022 %2$s</string>
    <string name="torrent_count_notify_template" formatted="false">Downloading: %1$d Total: %2$d</string>
    <string name="app_running_in_the_background">LibreTorrent running in the background</string>
    <string name="network_online">Network status: Online</string>
    <string name="network_offline">Network status: Offline</string>
    <string name="torrent_error_notify_title">Torrent error</string>
    <string name="error_template">Error: %1$s</string>
    <string name="torrent_does_not_exists_error">torrent doesn\'t exists</string>
    <string name="restore_torrent_error">unable to restore torrent from previous session</string>
    <string name="session_error_title">Session error</string>
    <string name="listen_failed_error" formatted="false">Could not listen %1$s:%2$d, type: %3$s (error: %4$s)</string>
    <string name="nat_error_title">NAT error</string>
    <string name="torrent_finished_notify">Torrent finished</string>
    <string name="torrents_move_notify_title" formatted="false">Moving torrents (%1$d/%2$d)</string>
    <string name="torrents_move_content">Please wait&#8230;</string>
    <string name="torrents_moved_title">Torrents moved</string>
    <string name="torrents_moved_content" formatted="false">Successfully: %1$d; Failed: %2$d</string>
    <string name="torrents_move_inbox_successfully">Successfully:</string>
    <string name="torrents_move_inbox_failed">Failed:</string>
    <string name="torrent_added_notify">Torrent added</string>
    <string name="download_counter_template" formatted="false">%1$s/%2$s (%3$d%%)</string>
    <string name="download_upload_speed_template" formatted="false">\u2193 %1$s/s | \u2191 %2$s/s</string>
    <string name="download_counter_ETA_template" formatted="false">%1$s/%2$s %3$s</string>
    <string name="peers_template" formatted="false">%1$d/%2$d</string>
    <string name="torrent_status_downloading">Downloading</string>
    <string name="torrent_status_seeding">Seeding</string>
    <string name="torrent_status_paused">Paused</string>
    <string name="torrent_status_stopped">Stopped</string>
    <string name="torrent_status_checking">Checking</string>
    <string name="torrent_status_finished">Finished</string>
    <string name="torrent_status_downloading_metadata">Downloading metadata</string>
    <string name="perm_denied_title">Permission denied</string>
    <string name="perm_denied_warning">Without this permission app can\'t save torrent files in memory. The app will not work properly. Are you sure you want to deny this permission?</string>
    <string name="add_torrent_title">Add torrent</string>
    <string name="error_decode_torrent">Failed decoding torrent file. Maybe the file is corrupted or has an incorrect format</string>
    <string name="error_io_torrent">Error reading the torrent file</string>
    <string name="error_fetch_link">Failed to fetch data from the link</string>
    <string name="error_invalid_link_or_path">Invalid link or path to the torrent</string>
    <string name="decode_torrent_progress_title">Loading</string>
    <string name="decode_torrent_default_message">Please wait&#8230;</string>
    <string name="decode_torrent_fetch_magnet_message">Fetching data from magnet link. Please wait&#8230;</string>
    <string name="decode_torrent_downloading_torrent_message">Downloading torrent file. Please wait&#8230;</string>
    <string name="error_add_torrent">Failed to add the torrent</string>
    <string name="error_file_not_found_add_torrent">Failed to add the torrent. Maybe the torrent file is moved, or deleted</string>
    <string name="error_io_add_torrent">Unable to add the torrent. I/O error</string>
    <string name="torrent_exist">Torrent already exists. Torrents were merged</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_no_files_selected">No files selected</string>
    <string name="free_space" formatted="false">%1$s free</string>
    <string name="error_free_space">There is not enough free space on the selected path to download the selected files</string>
    <string name="files_size" formatted="false">Selected %1$s out of %2$s</string>
    <string name="start_torrent">Start torrent</string>
    <string name="file_is_too_large_error">File is too large</string>
    <string name="torrent_info">Info</string>
    <string name="torrent_files">Files</string>
    <string name="torrent_name">Name</string>
    <string name="upload_torrent_into">Upload into</string>
    <string name="torrent_size">Size</string>
    <string name="torrent_file_count">File count</string>
    <string name="torrent_hash_sum">Hash sum</string>
    <string name="torrent_comment">Comment</string>
    <string name="torrent_create_date">Created</string>
    <string name="torrent_created_in_program">Created in program</string>
    <string name="sequential_download">Sequential download</string>
    <string name="enable_sequential_download">Enable sequential download</string>
    <string name="dir_chooser_title">Folder selection</string>
    <string name="file_chooser_title">File selection</string>
    <string name="torrent_file_chooser_title">Torrent selection</string>
    <string name="dialog_new_folder_title">New folder</string>
    <string name="error_dialog_new_folder">Unable to create a new folder</string>
    <string name="error_perm_write_in_folder">Unable to use selected folder to download. Please select another folder</string>
    <string name="error_open_dir">Unable to open the folder</string>
    <string name="home_directory">Home</string>
    <string name="storage_name_and_size" formatted="false">%1$s (%2$s)</string>
    <string name="internal_storage_name">Internal storage</string>
    <string name="external_storage_name" formatted="false">External storage %1$d</string>
    <string name="permission_denied">Permission denied</string>
    <string name="save_file">Save file</string>
    <string name="file_name">File name</string>
    <string name="error_file_exists">File already exists</string>
    <string name="file_name_is_empty">File name cannot be empty</string>
    <string name="report">Report</string>
    <string name="more_details">More details</string>
    <string name="file_status_template" formatted="false">%1$s \u2022 %2$s</string>
    <string name="file_downloading_status_template" formatted="false">%1$s \u2022 %2$s/%3$s \u2022 %4$d%% \u2022\nAvailability: %5$s</string>
    <string name="file_priority_normal">Normal</string>
    <string name="file_priority_low">Ignore</string>
    <string name="file_priority_high">High</string>
    <string name="file_priority_mixed">Mixed</string>
    <string name="change_priority">Priority</string>
    <string name="dialog_change_priority_title">Change priority</string>
    <string name="change_priority_low">Low (ignore file)</string>
    <string name="change_priority_normal">Normal</string>
    <string name="change_priority_high">High</string>
    <string name="torrent_state">State</string>
    <string name="torrent_speed">Speed</string>
    <string name="torrent_downloaded">Downloaded</string>
    <string name="torrent_ETA">ETA</string>
    <string name="torrent_seeds">Seeds</string>
    <string name="torrent_peers">Peers</string>
    <string name="torrent_leechers">Leechers</string>
    <string name="torrent_peers_template" formatted="false">%1$d (%2$d)</string>
    <string name="torrent_uploaded">Uploaded</string>
    <string name="torrent_share_ratio">Share ratio</string>
    <string name="home">Home</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share App</string>
    <string name="remove_ads">Premium Account</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="help">App Tour</string>
    <string name="welcome">Welcome to Itorrent</string>
</resources>