<com.ultimatesoftil.itorrent.customviews.ScrimInsetsFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/navdrawer_width"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:id="@+id/navdrawer"
    android:background="@color/navdrawer_background"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:clickable="true"
    android:weightSum="1"
    android:elevation="10dp"
    app:insetForeground="#4000">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/navDrawerScrollView">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/navDrawerLayout">

            <!-- Image Header-->

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:background="@drawable/navigation_drawer_bg"
                android:gravity="left|bottom"
                android:id="@+id/ltDrawerHeader">



                <!-- Slogan -->
                <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/txtNavSlogan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:textColor="#E9E9E9"
                    android:fontFamily="@font/dance"
                    android:text="@string/welcome"
                    android:paddingLeft="16dp"
                    android:layout_marginBottom="5dp"
                    android:textSize="28sp"
                    android:ellipsize="end" />



            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="#888" />

            <!-- Button -->


            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/txtNavButtonBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:orientation="vertical"
                android:layout_marginTop="5dp">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/txtNavButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="20dp"
                        android:id="@+id/txtNavButtonImage"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="15dp"
                        android:src="@drawable/ic_nav_home"
                        android:layout_marginRight="0dp" />

                    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:minHeight="?android:attr/listPreferredItemHeightSmall"
                        android:background="@android:color/transparent"
                        android:text="@string/home"
                        android:textStyle="bold"
                        android:singleLine="false"
                        android:focusableInTouchMode="true"
                        android:fontFamily="sans-serif"
                        android:focusable="false"
                        android:elegantTextHeight="false"
                        android:editable="false"
                        android:paddingTop="16dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="16dp"
                        android:paddingLeft="25dp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/nav_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:id="@+id/nav_rate_image"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/favorite"
                    android:layout_marginRight="0dp" />

                <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:minHeight="?android:attr/listPreferredItemHeightSmall"
                    android:background="@android:color/transparent"

                    android:textStyle="bold"
                    android:singleLine="false"
                    android:text="@string/rate_us"
                    android:focusableInTouchMode="true"
                    android:fontFamily="sans-serif"
                    android:focusable="false"
                    android:elegantTextHeight="false"
                    android:editable="false"
                    android:paddingTop="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="16dp"
                    android:paddingLeft="25dp" />

            </LinearLayout>
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/nav_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:id="@+id/nav_share_image"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/share"
                    android:layout_marginRight="0dp" />

                <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:minHeight="?android:attr/listPreferredItemHeightSmall"
                    android:background="@android:color/transparent"
                    android:text="@string/share_app"
                    android:textStyle="bold"
                    android:singleLine="false"
                    android:focusableInTouchMode="true"
                    android:fontFamily="sans-serif"
                    android:focusable="false"
                    android:elegantTextHeight="false"
                    android:editable="false"
                    android:paddingTop="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="16dp"
                    android:paddingLeft="25dp" />

            </LinearLayout>
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/nav_premium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:id="@+id/nav_premium_image"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/premium"
                    android:layout_marginRight="0dp" />

                <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:minHeight="?android:attr/listPreferredItemHeightSmall"
                    android:background="@android:color/transparent"
                    android:text="@string/remove_ads"
                    android:textStyle="bold"
                    android:singleLine="false"
                    android:focusableInTouchMode="true"
                    android:fontFamily="sans-serif"
                    android:focusable="false"
                    android:elegantTextHeight="false"
                    android:editable="false"
                    android:paddingTop="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="16dp"
                    android:paddingLeft="25dp" />

            </LinearLayout>
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/nav_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:id="@+id/nav_help_image"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/info"
                    android:layout_marginRight="0dp" />

                <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:minHeight="?android:attr/listPreferredItemHeightSmall"
                    android:background="@android:color/transparent"
                    android:text="@string/help"

                    android:textStyle="bold"
                    android:singleLine="false"
                    android:focusableInTouchMode="true"
                    android:fontFamily="sans-serif"
                    android:focusable="false"
                    android:elegantTextHeight="false"
                    android:editable="false"
                    android:paddingTop="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="16dp"
                    android:paddingLeft="25dp" />

            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/nav_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:id="@+id/nav_settings_image"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/settings"
                    android:layout_marginRight="0dp" />

                <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:minHeight="?android:attr/listPreferredItemHeightSmall"
                    android:background="@android:color/transparent"
                    android:text="@string/settings"
                    android:textStyle="bold"
                    android:singleLine="false"
                    android:focusableInTouchMode="true"
                    android:fontFamily="sans-serif"
                    android:focusable="false"
                    android:elegantTextHeight="false"
                    android:editable="false"
                    android:paddingTop="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="16dp"
                    android:paddingLeft="25dp" />

            </LinearLayout>
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/nav_privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:id="@+id/nav_privacy_image"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/notepad"
                    android:layout_marginRight="0dp" />

                <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:minHeight="?android:attr/listPreferredItemHeightSmall"
                    android:background="@android:color/transparent"
                    android:text="@string/privacy_policy"
                    android:textStyle="bold"
                    android:singleLine="false"
                    android:focusableInTouchMode="true"
                    android:fontFamily="sans-serif"
                    android:focusable="false"
                    android:elegantTextHeight="false"
                    android:editable="false"
                    android:paddingTop="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="16dp"
                    android:paddingLeft="25dp" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</com.ultimatesoftil.itorrent.customviews.ScrimInsetsFrameLayout>