<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        layout="@layout/statusbar_kitkat" />

    <RelativeLayout
        android:gravity="center"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="?attr/background">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/main_content"
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    android:layout_weight="2"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/lin"
                        style="@style/HeaderBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:elevation="5dp"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/view_pager">

                        <include layout="@layout/toolbar_actionbar" android:id="@+id/tool_bar"/>
                        <View
                            android:id="@+id/anchor_dropdown"
                            android:layout_width="match_parent"
                            android:layout_height="0dp" />
                        <com.google.android.material.tabs.TabLayout
                            android:id="@+id/sliding_tabs"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:tabIndicatorColor="@android:color/white"
                            app:tabMode="fixed"
                            app:tabTextColor="@android:color/white" />
                    </LinearLayout>

                    <androidx.viewpager.widget.ViewPager
                        android:id="@+id/view_pager"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"

                        />
                    <com.github.clans.fab.FloatingActionMenu
                        android:id="@+id/add_torrent_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingEnd="10dp"
                        android:paddingStart="16dp"
                        android:paddingTop="-10dp"
                        android:paddingBottom="16dp"
                        android:layout_gravity="right|bottom"
                        android:scaleType="fitCenter"
                        android:transitionName="fab"
                        android:contentDescription="@string/add"
                        app:layout_behavior="org.proninyaroslav.libretorrent.customviews.SnackBarBehavior"
                        fab:menu_fab_size="normal"
                        fab:menu_showShadow="true"
                        fab:menu_shadowColor="@color/fab_menu_shadow"
                        fab:menu_shadowRadius="2dp"
                        fab:menu_shadowXOffset="1dp"
                        fab:menu_shadowYOffset="1dp"
                        fab:menu_colorNormal="@color/fab"
                        fab:menu_colorPressed="@color/fab_ripple"
                        fab:menu_colorRipple="@color/accent_light"
                        fab:menu_animationDelayPerItem="50"
                        fab:menu_labels_padding="8dp"
                        fab:menu_labels_textColor="@color/text_primary_inverse"
                        fab:menu_labels_textSize="14sp"
                        fab:menu_labels_cornerRadius="3dp"
                        fab:menu_labels_colorNormal="@color/fab_menu_label_normal"
                        app:menu_labels_colorPressed="@color/fab_menu_label_normal"
                        app:menu_labels_colorRipple="@color/fab_menu_label_normal"
                        fab:menu_labels_showShadow="true"
                        fab:menu_labels_singleLine="false"
                        fab:menu_labels_ellipsize="none"
                        fab:menu_labels_maxLines="-1"
                        fab:menu_labels_position="left"
                        fab:menu_openDirection="up"
                        fab:menu_backgroundColor="@android:color/transparent"
                        android:focusable="true">
                        <com.github.clans.fab.FloatingActionButton
                            android:id="@+id/open_file_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_file_white_18dp"
                            app:fab_colorNormal="@color/primary"
                            app:fab_colorPressed="@color/primary_dark"
                            app:fab_colorRipple="@color/accent_light"
                            fab:fab_size="mini"
                            fab:fab_label="@string/open_file" />

                        <com.github.clans.fab.FloatingActionButton
                            android:id="@+id/add_link_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_link_white_18dp"
                            app:fab_colorNormal="@color/primary"
                            app:fab_colorPressed="@color/primary_dark"
                            app:fab_colorRipple="@color/accent_light"
                            fab:fab_size="mini"
                            fab:fab_label="@string/add_link" />


                        <!--<com.github.clans.fab.FloatingActionButton-->
                        <!--android:id="@+id/create_torrent_button"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:src="@drawable/ic_mode_edit_white_18dp"-->
                        <!--app:fab_colorNormal="@color/accent"-->
                        <!--app:fab_colorPressed="@color/accent_dark"-->
                        <!--app:fab_colorRipple="@color/accent_light"-->
                        <!--fab:fab_size="mini"-->
                        <!--fab:fab_label="@string/create_torrent" />-->
                    </com.github.clans.fab.FloatingActionMenu>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <View
                        android:id="@+id/toolbar_divider"
                        android:layout_width="1dp"
                        android:layout_height="?attr/actionBarSize"
                        android:background="?attr/colorPrimaryDark" />

                    <View
                        android:id="@+id/content_divider"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="?attr/divider" />
                </LinearLayout>

                <FrameLayout
                    android:id="@+id/detail_torrent_fragmentContainer"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4">
                </FrameLayout>
            </LinearLayout>
    </RelativeLayout>
</FrameLayout>